# shx

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  backlog.md  install.sh
.github/workflows/: release.yml
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: shx.tmLanguage.json
examples/: build.shx  demo.shx
src/: ast.rs  bashx.rs  cli.rs  codegen.rs  fmt.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs
tests/: e2e.rs
