[package]
name = "shx"
version = "0.1.0"
edition = "2024"
description = "A superset of POSIX sh with modern control flow syntax"
autobins = false

[[bin]]
name = "shx"
path = "src/main.rs"

[[bin]]
name = "bashx"
path = "src/bashx.rs"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }

[dev-dependencies]
pretty_assertions = "1"
